# my-haskell-scripts

./: .gitignore  LICENSE  movie-title-parsing.cabal  my-haskell-scripts.cabal
app/: Main.hs
src/: Lib.hs  Main.hs  MovieTitle.hs  MusicTagger.hs  Nutrition.hs
