name:                my-haskell-scripts
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/happyandharmless/my-haskell-scripts
license:             BSD3
license-file:        LICENSE
author:              Sridhar Ratnakumar
maintainer:          happyandharmless@icloud.com
copyright:           2016 Sridhar Ratnakumar
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable my-haskell-scripts-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parsec
                     , MissingH
  default-language:    Haskell2010

test-suite my-haskell-scripts-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/happyandharmless/my-haskell-scripts
